--- a/santa2_gpu.ipynb
+++ b/santa2_gpu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -118,6 +118,22 @@
     "    first,last = links[[0,-1]]\n",
     "    pair = links[1:-1].reshape(r,2)\n",
     "    \n",
+    "    pair_idx = list(range(r))\n",
+    "    pair_combo = []\n",
+    "    for _ in range(opt):\n",
+    "        pair_combo += list(combinations(pair_idx, _))\n",
+    "        \n",
+    "    num_possible_idx = len(pair_combo)\n",
+    "    possible_idx_from_pair = np.zeros((num_possible_idx,r),dtype=int)\n",
+    "    possible_idx_from_pos = np.zeros((num_possible_idx,),dtype=int)\n",
+    "    \n",
+    "    for i,pre in enumerate(pair_combo):\n",
+    "        pre_pairs_idx = list(pre)\n",
+    "        possible_idx_from_pair[i,pre_pairs_idx] = 1\n",
+    "        possible_idx_from_pos[i] = len(pre_pairs_idx)\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    permus = np.array(list(permutations(np.arange(r))))\n",
     "    prods = np.array(list(product([1,-1],repeat = r)))\n",
     "    \n",
@@ -128,10 +144,12 @@
     "    mask_p[:,0] = 0\n",
     "    \n",
     "    which_connect = np.zeros((opt,permus_n*prods_n,2),dtype=int)\n",
+    "    which_mask_t = np.zeros((opt,permus_n*prods_n),dtype=int)\n",
     "    \n",
     "    mask_t_node = np.zeros((permus_n*prods_n,opt-2,r),dtype=int)\n",
     "    mask_t_pos = np.zeros((permus_n*prods_n,opt-2),dtype=int)\n",
     "    \n",
+    "    which_new_pos = np.zeros((r, permus_n),dtype=int)\n",
     "    \n",
     "    for i in range(opt-2):\n",
     "        mask_t_pos[:,i] = i + 1\n",
@@ -178,15 +196,29 @@
     "\n",
     "            offset_idx_from_node[actual_seg,i,[before_current]] = 1\n",
     "            offset_idx_from_node[actual_seg,i+permus_n,[before_current]] = 1\n",
-    "                \n",
     "        \n",
-    "    reconstruct = np.array(reconstruct)            \n",
-    "    return reconstruct,permus,prods,which_middle_idx,offset_idx_from_node\\\n",
-    "            ,offset_idx_from_pos,mask_p,mask_t_pos,mask_t_node,which_connect\n",
+    "    \n",
+    "        \n",
+    "        for k in range(opt):\n",
+    "            if k<opt-1:\n",
+    "                actual_seg = permu[k]\n",
+    "                before_current = np.sort(permu[:k]).tolist()\n",
+    "                before_current = tuple(before_current)\n",
+    "                which_combo = pair_combo.index(before_current)\n",
+    "                \n",
+    "                which_mask_t[k,i*prods_n:(i+1)*prods_n] = which_combo\n",
+    "                which_new_pos[actual_seg, i] = which_combo\n",
+    "            else:\n",
+    "                which_mask_t[k,i*prods_n:(i+1)*prods_n] = len(pair_combo)-1\n",
+    "    reconstruct = np.array(reconstruct)      \n",
+    "    \n",
+    "    return reconstruct,permus,prods,which_middle_idx,offset_idx_from_node,\\\n",
+    "           offset_idx_from_pos,mask_p,mask_t_pos,mask_t_node,which_connect,\\\n",
+    "           possible_idx_from_pair,possible_idx_from_pos,which_mask_t,which_new_pos\n",
     "\n",
     "\n",
     "def getlinks(pivot, candidates, solution):\n",
-    "    each = 8\n",
+    "    each =9\n",
     "    node1,node2 = solution[pivot:pivot+2]\n",
     "    already = [node1]\n",
     "    c1 = candidates[node1][:each].tolist()\n",
@@ -234,40 +266,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:134: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n"
+     ]
+    }
+   ],
    "source": [
-    "qwe = 4\n",
-    "asd = list(range(qwe-1))\n",
-    "final = []\n",
-    "for _ in range(qwe+1):\n",
-    "    final += list(combinations(asd,_))\n",
-    "len(final)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "final"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "p = problem(base_path='./solution/submit_base3_4.csv')\n",
+    "p = problem(base_path='./solution/base4_2.csv')\n",
     "p.score(p.base,raw=False)\n",
     "\n",
     "solution = p.base.copy()\n",
@@ -281,7 +292,8 @@
     "opt = 5\n",
     "reconstruct,permus,prods,which_middle_idx,\\\n",
     "offset_idx_from_node,offset_idx_from_pos,\\\n",
-    "mask_p,mask_t_pos,mask_t_node,which_connect = generate(opt)\n",
+    "mask_p,mask_t_pos,mask_t_node,which_connect,\\\n",
+    "possible_idx_from_pair,possible_idx_from_pos,which_mask_t,which_new_pos= generate(opt)\n",
     "\n",
     "num_permu = len(permus)\n",
     "num_prod = len(prods)\n",
@@ -292,11 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -318,9 +327,10 @@
     "_offset_idx_from_node = tf.constant(offset_idx_from_node[:,:num_permu,:,np.newaxis], dtype='int32') \n",
     "_offset_idx_from_pos = tf.constant(offset_idx_from_pos[:,:num_permu,np.newaxis], dtype='int32') \n",
     "_mask_p = tf.constant(mask_p.T, dtype='int32') \n",
-    "_mask_t_pos = tf.constant(np.swapaxes(mask_t_pos,0,1)[:,:,None], dtype='int32') \n",
-    "_mask_t_node = tf.constant(np.swapaxes(mask_t_node,0,1)[:,:,:,None], dtype='int32') \n",
-    "\n",
+    "_possible_idx_from_pair = tf.constant(possible_idx_from_pair[:,:,None], dtype='int32') \n",
+    "_possible_idx_from_pos = tf.constant(possible_idx_from_pos[:,None], dtype='int32') \n",
+    "_which_mask_t = tf.constant(which_mask_t, dtype='int32') \n",
+    "_which_new_pos = tf.constant(which_new_pos, dtype='int32') \n",
     "\n",
     "#bookkeepers\n",
     "_solution = tf.Variable(solution, dtype='int32', expected_shape=(n+1,))\n",
@@ -337,32 +347,6 @@
     "_pairstep = _links[2:-1:2] - _links[1:-1:2]\n",
     "_linksprime = tf.gather(_notprime, _linksnode)\n",
     "\n",
-    "##segment\n",
-    "_forwardat = _links[1:-1:2,None,:]\n",
-    "_backwardat = n - _links[2:-1:2,None,:]\n",
-    "_newpos = tf.reduce_sum(_pairstep * _offset_idx_from_node, axis=2)\\\n",
-    "          + _offset_idx_from_pos\\\n",
-    "          + _links[0]\n",
-    "_forwardoffset = (_newpos - _forwardat)%10\n",
-    "_backwardatoffset = (_newpos - _backwardat)%10 + 10\n",
-    "_whichoffset = tf.concat([_forwardoffset,_backwardatoffset], axis=1)\n",
-    "\n",
-    "_segpenalty = tf.gather(_dist,_links[2:-1:2]) - tf.gather(_dist,_links[1:-1:2])\n",
-    "_segments = []\n",
-    "for pair in range(opt-1):\n",
-    "    _segpenaltyslot = tf.batch_gather(_segpenalty[pair], tf.transpose(_whichoffset[pair]))\n",
-    "    _segpenaltypermu = tf.gather(_segpenaltyslot, _which_middle_idx[pair], axis=1)\n",
-    "    _segments.append(_segpenaltypermu)\n",
-    "_segments = tf.transpose(sum(_segments))\n",
-    "\n",
-    "##connector\n",
-    "##_connector = tf.gather(_linksnode, _reconstruct)\n",
-    "#_connectorcoor = tf.gather(_linksnodecoor, _reconstruct)\n",
-    "#_connectorcoor1 = _connectorcoor[0::2]\n",
-    "#_connectorcoor2 = _connectorcoor[1::2]\n",
-    "#_connectorrawdist = (_connectorcoor1 - _connectorcoor2) ** 2\n",
-    "#_connectorrawdist = tf.sqrt(tf.reduce_sum(_connectorrawdist, axis=-1))\n",
-    "\n",
     "_coor1 = tf.stack([_linksnodecoor]*(opt*2),axis=0)\n",
     "_coor2 = tf.stack([_linksnodecoor]*(opt*2),axis=1)\n",
     "_connectorrawdist = (_coor1 - _coor2) ** 2\n",
@@ -371,15 +355,45 @@
     "\n",
     "_maskprime = tf.gather(_linksprime, _mask_p)\n",
     "\n",
-    "_firstend = tf.tile(_links[1:2,None,:],[1,num_reconstruct,1])\n",
-    "_lastend = tf.tile(_links[-1:,None,:],[1,num_reconstruct,1])\n",
-    "_midend = tf.reduce_sum(_pairstep *_mask_t_node,axis=2) + _mask_t_pos + _links[1]\n",
-    "_endpos = tf.concat([_firstend,_midend,_lastend], axis=0)\n",
-    "_maskten = tf.equal(_endpos%10, 0)\n",
-    "\n",
+    "_tenpos = tf.reduce_sum(_possible_idx_from_pair*_pairstep , axis=1)\\\n",
+    "               + _possible_idx_from_pos\\\n",
+    "               + _links[0] + 1\n",
+    "_masktenpos = tf.equal(_tenpos%10, 0)\n",
+    "_maskten = tf.gather(_masktenpos, _which_mask_t)\n",
+    "        \n",
     "_mask = tf.logical_and(_maskprime, _maskten)\n",
     "_connectordist = tf.where(_mask, _connectorrawdist*1.1, _connectorrawdist)\n",
     "_connectordist = tf.reduce_sum(_connectordist, axis=0)\n",
+    "\n",
+    "#'''\n",
+    "##segment\n",
+    "_forwardat = _links[1:-1:2,None,:]\n",
+    "_backwardat = n - _links[2:-1:2,None,:]\n",
+    "#'''     \n",
+    "#_newpos = tf.gather(_tenpos,_which_new_pos)\n",
+    "#_forwardoffset = (_newpos - _forwardat)%10\n",
+    "#_backwardatoffset = (_newpos - _backwardat)%10 + 10\n",
+    "\n",
+    "_possibleforoffset = (_tenpos-_forwardat)%10\n",
+    "_possiblebackoffset = (_tenpos-_backwardat)%10 + 10\n",
+    "_forwardoffset = tf.batch_gather(_possibleforoffset, _which_new_pos)\n",
+    "_backwardatoffset = tf.batch_gather(_possiblebackoffset,_which_new_pos)\n",
+    "\n",
+    "_whichoffset = tf.concat([_forwardoffset,_backwardatoffset], axis=1)\n",
+    "\n",
+    "_segpenalty = tf.gather(_dist,_links[2:-1:2]) - tf.gather(_dist,_links[1:-1:2])\n",
+    "#_segments = []\n",
+    "#for pair in range(opt-1):\n",
+    "    #_segpenaltyslot = tf.batch_gather(_segpenalty[pair], tf.transpose(_whichoffset[pair]))\n",
+    "    #_segpenaltypermu = tf.gather(_segpenaltyslot, _which_middle_idx[pair], axis=1)\n",
+    "    #_segments.append(_segpenaltypermu)\n",
+    "#_segments = tf.transpose(sum(_segments))\n",
+    "\n",
+    "_legpenalty = tf.batch_gather(_segpenalty, tf.transpose(_whichoffset,[0,2,1] ))\n",
+    "_legpenalty = tf.transpose(_legpenalty,[0,2,1])\n",
+    "_legpenalty = tf.batch_gather(_legpenalty, _which_middle_idx)\n",
+    "_segments = tf.reduce_sum(_legpenalty, axis=0)\n",
+    "\n",
     "\n",
     "#final\n",
     "_out = _segments + _connectordist\n",
@@ -391,40 +405,12 @@
     "_newdist = tf.placeholder(shape=(n+1, 20), dtype='float64')\n",
     "\n",
     "_updatesolution = tf.assign(_solution, _newsolution, name='updatesolution')\n",
-    "_updatedist = tf.assign(_dist, _newdist, name='updatedist')\n",
-    "\n",
-    "#calculate nearest neighbors\n",
-    "_node = tf.placeholder(dtype='int32')\n",
-    "_distance = (_nodes - _nodes[_node]) ** 2\n",
-    "_distance = tf.sqrt(tf.reduce_sum(_distance, axis=-1))\n",
-    "_top20 = tf.contrib.framework.argsort(_distance)[1:21]"
+    "_updatedist = tf.assign(_dist, _newdist, name='updatedist')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "tf.sqrt(tf.reduce_sum((_connectorcoor1 - _connectorcoor2) ** 2, axis=-1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "_newpos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -438,78 +424,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "scrolled": false
    },
-   "outputs": [],
-   "source": [
-    "links = getlinks(4, candidates, solution)\n",
-    "links.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = time.time()\n",
-    "for _ in range(20):\n",
-    "    sess.run(_forwardoffset,feed_dict={_links:links})\n",
-    "print(time.time()-a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = time.time()\n",
-    "for _ in range(20):\n",
-    "    old = sess.run(_connectorrawdist,feed_dict={_links:links})\n",
-    "print(time.time()-a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = time.time()\n",
-    "for _ in range(20):\n",
-    "    old = sess.run(_lastend,feed_dict={_links:links})\n",
-    "print(time.time()-a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a = time.time()\n",
-    "for _ in range(20):\n",
-    "    old = sess.run(_result,feed_dict={_links:links})\n",
-    "print(time.time()-a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1516130.8428928768\n",
+      "#######################\n",
+      "iteration 1\n",
+      "0 0.13800787925720215\n",
+      "[     7      8      8      9 196876 196877 197732 197733 197733 197734] 336 -1.5454829672762571 1516129.2974099093\n",
+      "[    33     34     35     36     36     37     42     43 196824 196825] 32 -0.2445675912204024 1516129.052842318\n",
+      "[116 117 119 120 151 152 706 707 708 709] 68 -0.2865570085901794 1516128.7662853096\n",
+      "[124 125 125 126 128 129 134 135 691 692] 80 -0.40817586885312096 1516128.3581094407\n",
+      "[163 164 249 250 254 255 256 257 257 258] 306 -0.19660936646167926 1516128.1615000742\n",
+      "[251 252 339 340 340 341 387 388 403 404] 32 -0.036047757681480164 1516128.1254523166\n"
+     ]
+    }
+   ],
    "source": [
     "print(p.score(solution))\n",
     "a=time.time()\n",
@@ -526,21 +460,22 @@
     "        if len(links)>0:\n",
     "            batch = links.shape[1]\n",
     "\n",
-    "            result,best = sess.run([_result,_best],feed_dict={_links:links})\n",
-    "\n",
+    "            out = sess.run(_out,feed_dict={_links:links})\n",
+    "            check_call += 1\n",
+    "            result = np.argmin(out)\n",
+    "            \n",
     "            which_link = result%batch\n",
     "            code = result//batch\n",
     "            if code>0:\n",
+    "                improvement = out[code,which_link]\n",
     "                swaps += 1\n",
     "                link = links[:,which_link]\n",
-    "                #c,imp = check(link,nodes,solution,prime_set,dist)\n",
-    "                #print(c,imp)\n",
     "                excute_swap(code,link,solution)\n",
     "                dist = two_way_distance(nodes,solution,prime)\n",
     "\n",
     "                sess.run(['updatesolution','updatedist'],feed_dict={_newsolution:solution,\n",
     "                                                                   _newdist:dist.T})\n",
-    "                print(link,code,best,p.score(solution))\n",
+    "                print(link,code,improvement,p.score(solution))\n",
     "        if i%5000 == 0:\n",
     "            b = time.time()\n",
     "            print(i,b-a)\n",
@@ -574,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
